<resources>
    <string name="app_name">RestaurantManger</string>
    <string name="action_open">open</string>
    <string name="title_activity_main">前台营业</string>
    <string name="navigation_super_item_1">前台营业</string>
    <string name="navigation_super_item_2">营业分析</string>
    <string name="navigation_super_item_3">财务机构</string>
    <string name="navigation_super_item_4">辅助管理</string>
    <string name="navigation_super_item_5">营业设置</string>
    <string name="drawerLayout_open">Open</string>
    <string name="drawerLayout_close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment1">fragment1</string>
    <string name="hello_blank_fragment2">fragment2</string>
    <string name="hello_blank_fragment3">fragment3</string>
    <string name="hello_blank_fragment4">fragment4</string>
    <string name="hello_blank_fragment5">fragment5</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_sub_item1_1">日始日结</string>
    <string name="navigation_sub_item1_2">接待预订</string>
    <string name="navigation_sub_item1_3">点菜收银</string>
    <string name="navigation_sub_item2_1">销售分析</string>
    <string name="navigation_sub_item2_2">房台分析</string>
    <string name="navigation_sub_item2_3">酒菜分析</string>
    <string name="navigation_sub_item2_4">操作分析</string>
    <string name="navigation_sub_item2_5">业绩分析</string>
    <string name="navigation_sub_item3_1">账单查询</string>
    <string name="navigation_sub_item3_2">点单查询</string>
    <string name="navigation_sub_item3_3">挂单查询</string>
    <string name="navigation_sub_item4_1">操作员管理</string>
    <string name="navigation_sub_item4_2">挂账管理</string>
    <string name="navigation_sub_item5_1">酒菜设置</string>
    <string name="navigation_sub_item5_2">房台设置</string>
    <string name="navigation_sub_item5_3">其它设置</string>

</resources>
