<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/navigation_super_item_1">
        <menu>
            <item
                android:id="@+id/navigation_sub_item1_1"
                android:icon="@drawable/ic_action_phone"
                android:title="@string/navigation_sub_item1_1"/>
            <item
                android:id="@+id/navigation_sub_item1_2"
                android:icon="@drawable/ic_action_phone"
                android:title="@string/navigation_sub_item1_2"/>
            <item
                android:id="@+id/navigation_sub_item1_3"
                android:icon="@drawable/ic_action_phone"
                android:title="@string/navigation_sub_item1_3"/>

        </menu>
    </item>
    <item android:title="@string/navigation_super_item_2">
        <menu>
            <item
                android:id="@+id/navigation_sub_item2_1"
                android:icon="@drawable/ic_action_phone"
                android:title="@string/navigation_sub_item2_1"/>
            <item
                android:id="@+id/navigation_sub_item2_2"
                android:icon="@drawable/ic_action_phone"
                android:title="@string/navigation_sub_item2_2"/>
            <item
                android:id="@+id/navigation_sub_item2_3"
                android:icon="@drawable/ic_action_phone"
                android:title="@string/navigation_sub_item2_3"/>
            <item
                android:id="@+id/navigation_sub_item2_4"
                android:icon="@drawable/ic_action_phone"
                android:title="@string/navigation_sub_item2_4"/>
            <item
                android:id="@+id/navigation_sub_item2_5"
                android:icon="@drawable/ic_action_phone"
                android:title="@string/navigation_sub_item2_5"/>
        </menu>
    </item>
    <item android:title="@string/navigation_super_item_3">
        <menu>
            <item
                android:id="@+id/navigation_sub_item3_1"
                android:icon="@drawable/ic_action_phone"
                android:title="@string/navigation_sub_item3_1"/>
            <item
                android:id="@+id/navigation_sub_item3_2"
                android:icon="@drawable/ic_action_phone"
                android:title="@string/navigation_sub_item3_2"/>
            <item
                android:id="@+id/navigation_sub_item3_3"
                android:icon="@drawable/ic_action_phone"
                android:title="@string/navigation_sub_item3_3"/>
        </menu>
    </item>
    <item android:title="@string/navigation_super_item_4">
        <menu>
            <item
                android:id="@+id/navigation_sub_item4_1"
                android:icon="@drawable/ic_action_phone"
                android:title="@string/navigation_sub_item4_1"/>
            <item
                android:id="@+id/navigation_sub_item4_2"
                android:icon="@drawable/ic_action_phone"
                android:title="@string/navigation_sub_item4_2"/>
        </menu>
    </item>
    <item android:title="@string/navigation_super_item_5">
        <menu>
            <item
                android:id="@+id/navigation_sub_item5_1"
                android:icon="@drawable/ic_action_phone"
                android:title="@string/navigation_sub_item5_1"/>
            <item
                android:id="@+id/navigation_sub_item5_2"
                android:icon="@drawable/ic_action_phone"
                android:title="@string/navigation_sub_item5_2"/>
            <item
                android:id="@+id/navigation_sub_item5_3"
                android:icon="@drawable/ic_action_phone"
                android:title="@string/navigation_sub_item5_3"/>
        </menu>
    </item>

</menu>